Add Roact, Rodux and RoactRodux files

--- a/default.project.json
+++ b/default.project.json
@@ -1,12 +1,20 @@
 {
   "name": "PartToTerrain",
-  "servePort": 34872,
   "tree": {
     "$className": "DataModel",
     "ServerScriptService": {
       "$className": "ServerScriptService",
       "PartToTerrain": {
-        "$path": "src"
+        "$path": "src",
+        "Roact": {
+          "$path": "modules/Roact"
+        },
+        "Rodux": {
+          "$path": "modules/Rodux"
+        },
+        "RoactRodux": {
+          "$path": "modules/RoactRodux"
+        }
       }
     }
   }
