--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,1 @@
-custom: https://www.roblox.com/library/261634767/Part-to-Terrain
+custom: ["https://www.roblox.com/library/4685764627/Part-to-Terrain-DEV"]
