Added testing scripts

--- a/default.project.json
+++ b/default.project.json
@@ -2,12 +2,16 @@
   "name": "PartToTerrain",
   "tree": {
     "$className": "DataModel",
-    "PartToTerrain": {
-      "$path": "src",
-      "Libs": {
-        "$className": "Folder",
-        "$path": "modules"
+
+    "ReplicatedStorage" : {
+      "PartToTerrain": {
+        "$path": "src",
+        "Libs": {
+          "$className": "Folder",
+          "$path": "modules"
+        }
       }
     }
+
   }
 }
