--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,11 +16,10 @@ jobs:
     - name: Install Selene
       run: |
         wget -q -O selene-zip https://github.com/Kampfkarren/selene/releases/download/0.14.0/selene-0.14.0-linux.zip
-        unzip selene-zip
-        chmod +x ./selene
+        unzip selene-zip -d /usr/bin && chmod +x /usr/bin/selene
 
     - name: Generate Roblox standards
-      run: ./selene generate-roblox-std
+      run: selene generate-roblox-std
 
     - name: Run Selene
-      run: ./selene ./src
+      run: selene ./src
