Updated Rojo configs.
`default.project.json` is for production compiling and WILL NOT work with the Rojo plugin.

`testing.project.json` is for testing and does work with the Rojo plugin.

--- a/default.project.json
+++ b/default.project.json
@@ -1,29 +1,17 @@
 {
   "name": "Part to Terrain",
   "tree": {
-    "$className": "DataModel",
-
-    "ReplicatedStorage" : {
-      "$className": "ReplicatedStorage",
-      "PartToTerrain": {
-        "$path": "src",
-
-        "Packages": {
-          "$className": "Folder",
-          "Roact": {
-            "$path": "packages/Roact/src"
-          },
-          "BasicState": {
-            "$path": "packages/BasicState/src"
-          }
-        }
-
+    "$path": "src",
+    "Packages": {
+      "$path": "packages",
+      "BasicState": {
+        "$path": "packages/BasicState/src"
       }
     }
   },
 
   "globIgnorePaths": [
-    "packages/**/*.spec.lua",
-    "packages/Roact/*.spec"
+    "**/*.story.lua",
+    "**/*.spec*"
   ]
 }
