Updated on how to compile the plugin

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
   "recommendations": [
-    "evaera.vscode-rojo"
+    "evaera.vscode-rojo",
+    "nightrains.robloxlsp",
+    "kampfkarren.selene-vscode"
   ]
 }
