--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: roblox/setup-foreman@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          version: "=1.0.3"
+          version: "^1.0.5"
 
       - name: List installed foreman tools
         run: foreman list
