Compile using rbxm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,4 @@ jobs:
         run: wally install
 
       - name: Build plugin
-        run: rojo build default.project.json --output PartToTerrain.rbxmx
+        run: rojo build default.project.json --output PartToTerrain.rbxm
