--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,4 @@ jobs:
         run: wally install
 
       - name: Build plugin
-        run: rojo build default.project.json --output PartToTerrain.rbxm
+        run: rojo build default.project.json -o PartToTerrain.rbxm
