--- a/wally.toml
+++ b/wally.toml
@@ -6,4 +6,5 @@ realm = "shared"
 
 [dependencies]
 Roact = "roblox/roact@=1.4.4"
+RoactHooks = "kampfkarren/roact-hooks@=0.5.1"
 BasicState = "csqrl/basicstate@=0.2.6"
