--- a/foreman.toml
+++ b/foreman.toml
@@ -1,4 +1,5 @@
 [tools]
-rojo = { source = "rojo-rbx/rojo", version = "^7.3.0" }
+rojo = { source = "rojo-rbx/rojo", version = "^7.4.4" }
 wally = { source = "UpliftGames/wally", version = "=0.3.2" }
-selene = { source = "Kampfkarren/selene", version = "^0.26.1" }
+selene = { source = "Kampfkarren/selene", version = "^0.27.1" }
+wally-package-types = { source = "JohnnyMorganz/wally-package-types", version = "^1.3.2" }
