--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,12 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: roblox/setup-foreman@v2
+      - uses: CompeyDev/setup-rokit@v0.1.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: List installed foreman tools
-        run: foreman list
 
       - name: Install Wally packages
         run: wally install
